--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <title>Yins Portfolio</title>
     </head>
     <body>
-        <div class="navigation">
+        <!-- <div class="navigation">
             <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
             <label for="navi-toggle" class="navigation__button">
                 <span class="navigation__icon">&nbsp;</span>
@@ -24,14 +24,12 @@
 
             <nav class="navigation__nav">
                 <ul class="navigation__list">
-                    <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Natours</a></li>
-                    <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Your benefits</a></li>
-                    <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular tours</a></li>
-                    <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Stories</a></li>
-                    <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Book now</a></li>
+                    <li class="navigation__item"><a for="navi-toggle" href="#about" class="navigation__link"><span>01</span>About Me</a></li>
+                    <li class="navigation__item"><a for="navi-toggle" href="#skill" class="navigation__link"><span>02</span>Skills & Experience</a></li>
+                    <li class="navigation__item"><a for="navi-toggle" href="#portfolio" class="navigation__link"><span>03</span>My Portfolio</a></li>
                 </ul>
             </nav>
-        </div>
+        </div> -->
 
         <header class="header">
             <div class="header__logo-box">
@@ -46,7 +44,7 @@
         </header>
 
         <main>
-            <section class="section-about">
+            <section id="about" class="section-about">
                 <!-- Utility Class -->
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary--dark">
@@ -84,7 +82,7 @@
                 </div>
             </section>
 
-            <section class="section-features">
+            <section id="skill" class="section-features">
                 <div class="u-center-text u-margin-bottom-mid">
                     <h2 class="heading-secondary--light">
                         Skills & experience
@@ -170,7 +168,7 @@
                                         <p class="card__price-only">邀您共享</p>
                                         <p class="card__price-value">我的創意</p>
                                     </div>
-                                    <a href="#popup" class="btn btn--white">Let's See!</a>
+                                    <a href="https://yins-business-starter-dcd6ca.webflow.io" class="btn btn--white">Let's See!</a>
                                 </div>
                             </div>
                         </div>
