--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                                         <p class="card__price-only">邀您同樂</p>
                                         <p class="card__price-value">我的點滴</p>
                                     </div>
-                                    <a href="#popup" class="btn btn--white">Let's Play!</a>
+                                    <a href="https://yins-business-starter-dcd6ca.webflow.io/about" class="btn btn--white">Let's Play!</a>
                                 </div>
                             </div>
                         </div>
@@ -225,7 +225,7 @@
                                         <p class="card__price-only">邀您暢聊</p>
                                         <p class="card__price-value">我的夢想</p>
                                     </div>
-                                    <a href="#popup" class="btn btn--white">Let's Go!</a>
+                                    <a href="https://yins-business-starter-dcd-7ee176059a12f.webflow.io/" class="btn btn--white">Let's Go!</a>
                                 </div>
                             </div>
                         </div>
