--- a/index.html
+++ b/index.html
@@ -241,12 +241,12 @@
             
                     <div class="footer__navigation">
                         <ul class="footer__list">
-                            <li class="footer__item"><a href="#" class="footer__link"><i class="fas fa-envelope"></i></a></li>
-                            <li class="footer__item"><a href="#" class="footer__link"><i class="fab fa-line"></i></a></li>
-                            <li class="footer__item"><a href="#" class="footer__link"><i class="fab fa-facebook-square"></i></a></li>
-                            <li class="footer__item"><a href="#" class="footer__link"><i class="fab fa-linkedin"></i></a></li>
-                            <li class="footer__item"><a href="#" class="footer__link"><i class="fab fa-codepen"></i></a></li>
-                            <li class="footer__item"><a href="#" class="footer__link"><i class="fab fa-github-square"></i></a></li>
+                            <li class="footer__item"><a href="mailto:jerry7657@gmail.com" class="footer__link"><i class="fas fa-envelope"></i></a></li>
+                            <li class="footer__item"><a href="https://line.me/ti/p/091921706" class="footer__link"><i class="fab fa-line"></i></a></li>
+                            <li class="footer__item"><a href="https://www.facebook.com/profile.php?id=100001907795168" class="footer__link"><i class="fab fa-facebook-square"></i></a></li>
+                            <li class="footer__item"><a href="https://www.linkedin.com/in/tsung-yen-yin-4b1024179/" class="footer__link"><i class="fab fa-linkedin"></i></a></li>
+                            <li class="footer__item"><a href="https://codepen.io/jerry-yin" class="footer__link"><i class="fab fa-codepen"></i></a></li>
+                            <li class="footer__item"><a href="https://github.com/jerry7657" class="footer__link"><i class="fab fa-github-square"></i></a></li>
                         </ul>
                     </div>
               
